\name{InteractionSetnews}
\title{InteractionSet News}
\encoding{UTF-8}

\section{Version 0.99.0}{\itemize{
\item
New package InteractionSet, containing base classes for genomic interaction data.
}}
