@@ -1,6 +1,6 @@
 Package: InteractionSet
-Version: 1.1.4
-Date: 2016-06-14
+Version: 1.1.5
+Date: 2016-06-24
 Title: Base Classes for Storing Genomic Interaction Data
 Author: Aaron Lun <alun@wehi.edu.au>, Malcolm Perry <mgperry32@gmail.com>,
         Liz Ing-Simmons <liz.ing-simmons12@csc.mrc.ac.uk> 
